--- a/layouts/taxonomy/terms.html
+++ b/layouts/taxonomy/terms.html
@@ -10,20 +10,18 @@
       {{ $currDropCap = .Title | upper | truncate 1 "" }}
 
       {{ if not (eq $currDropCap $lastDropCap) }}
-        {{ if not (eq $index 0) }}
-        </ul>
-        {{ end }}
+        <!-- prettier-ignore -->
+        {{ if not (eq $index 0) }}</ul>{{ end }}
 
         <ul class="taxonomy-section">
           <h2>{{ $currDropCap }}</h2>
       {{ end }}
 
       {{ $lastDropCap = $currDropCap }}
-          <a class="taxonomy-item" href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
+        <a class="taxonomy-item" href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
 
-          {{ if (eq $index $lastElement) }}
-          </ul>
-          {{ end }}
+      <!-- prettier-ignore -->
+      {{ if (eq $index $lastElement) }}</ul>{{ end }}
     {{ end }}
   </ul>
 
