--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -1,13 +1,13 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{{ default .Summary .Description }}">
-<meta name="theme-color" content="#FFFFFF">
-<meta name="color-scheme" content="light dark">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="{{ default .Summary .Description }}" />
+<meta name="theme-color" content="#FFFFFF" />
+<meta name="color-scheme" content="light dark" />
 
 {{ if or (not (eq hugo.Environment "production")) (.Params.hide) }}
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, nofollow" />
 {{ else }}
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow" />
 {{ end }}
 
 {{- with .Page.Params.BookHref -}}
@@ -16,33 +16,53 @@
 
 {{- template "_internal/opengraph.html" . -}}
 
+
 <title>{{ partial "docs/html-head-title" . }}</title>
 
 {{- $manifest := resources.Get "manifest.json" | resources.ExecuteAsTemplate "manifest.json" . }}
-<link rel="manifest" href="{{ $manifest.RelPermalink }}">
-<link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/x-icon">
+<link rel="manifest" href="{{ $manifest.RelPermalink }}" />
+<link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/x-icon" />
 
 {{- range .Translations }}
-  <link rel="alternate" hreflang="{{ default .Language.Lang .Site.LanguageCode }}" href="{{ .Permalink }}" title="{{ partial "docs/title" . }}">
+  <link
+    rel="alternate"
+    hreflang="{{ default .Language.Lang .Site.LanguageCode }}"
+    href="{{ .Permalink }}"
+    title="{{ partial "docs/title" . }}"
+  />
 {{- end -}}
+
 
 <!-- Theme stylesheet, you can customize scss by creating `assets/custom.scss` in your website -->
 {{- $styles := resources.Get "book.scss" | resources.ExecuteAsTemplate "book.scss" . | resources.ToCSS (dict "enableSourceMap" "true") | resources.Fingerprint }}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}" {{ template "integrity" $styles }}>
+<link
+  rel="stylesheet"
+  href="{{ $styles.RelPermalink }}"
+  {{ template "integrity" $styles }}
+/>
 
 {{- if default true .Site.Params.BookSearch -}}
   {{- $searchJSFile := printf "%s.search.js" .Language.Lang }}
   {{- $searchJS := resources.Get "search.js" | resources.ExecuteAsTemplate $searchJSFile . | resources.Minify | resources.Fingerprint }}
   <script defer src="{{ "flexsearch.min.js" | relURL }}"></script>
-  <script defer src="{{ $searchJS.RelPermalink }}" {{ template "integrity" $searchJS }}></script>
+  <script
+    defer
+    src="{{ $searchJS.RelPermalink }}"
+    {{ template "integrity" $searchJS }}
+  ></script>
 {{ end -}}
 
 {{- if .Site.Params.BookServiceWorker -}}
   {{- $swJS := resources.Get "sw-register.js" | resources.ExecuteAsTemplate "sw.js" . | resources.Minify | resources.Fingerprint }}
-  <script defer src="{{ $swJS.RelPermalink }}" {{ template "integrity" $swJS }}></script>
+  <script
+    defer
+    src="{{ $swJS.RelPermalink }}"
+    {{ template "integrity" $swJS }}
+  ></script>
 {{ end -}}
 
 {{- template "_internal/google_analytics.html" . -}}
+
 
 <!-- RSS -->
 {{- with .OutputFormats.Get "rss" -}}
@@ -50,8 +70,7 @@
 {{ end -}}
 
 {{ "<!--" | safeHTML }}
-Made with Book Theme
-https://github.com/alex-shpak/hugo-book
+Made with Book Theme https://github.com/alex-shpak/hugo-book
 {{ "-->" | safeHTML }}
 
 {{- define "integrity" -}}
@@ -59,4 +78,3 @@ https://github.com/alex-shpak/hugo-book
     integrity="{{ .Data.Integrity }}" crossorigin="anonymous"
   {{- end -}}
 {{- end -}}
-
