--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,10 +1,7 @@
 {{ $src := .Get "src" }}
 {{ $alt := .Get "alt" }}
 
+
 <div class="center">
-  <img
-    src="{{ $src }}"
-    alt="{{ $alt }}"
-    decoding="async"
-  />
+  <img src="{{ $src }}" alt="{{ $alt }}" decoding="async" />
 </div>
