--- a/assets/_collapsible.scss
+++ b/assets/_collapsible.scss
@@ -1,3 +1,4 @@
+// General
 .collapsible {
   // control containers
   h2,
@@ -23,6 +24,7 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: 300;
+    color: var(--body-font-color, black);
 
     &:hover {
       font-weight: 400;
@@ -44,13 +46,14 @@
   }
 }
 
+// Case Specific
 .book-toc .collapsible {
   h2 {
     font-size: 1em;
   }
 
   .anchor {
-    color: black;
+    color: var(--body-font-color, black);
     font-weight: bold;
   }
 }
