chore: Importing marketHealthChart.js from partial

--- a/layouts/partials/docs/marketHealthChart.html
+++ b/layouts/partials/docs/marketHealthChart.html
@@ -16,7 +16,7 @@
     <h2>Market Health Metrics</h2>
 
     <div>
-        <label for="cryptoSelect">Criptomoeda:</label>
+        <label for="cryptoSelect">CryptoCurrencies:</label>
         <select id="cryptoSelect"></select>         
     </div>
     
@@ -39,7 +39,7 @@
     </div>
     
     <script src="../../../static/js/marketHealthChart.js"></script>
-    <!-- <script src="/js/marketHealthChart.js"></script> -->
+    <script src="/js/marketHealthChart.js"></script>
 </body>
 
 </html>
