--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -60,6 +60,7 @@
 
     {{ partial "docs/inject/body" . }}
     {{ partial "docs/image-modal" . }}
+    {{ partial "docs/inject/image-gallery" . }}
   </body>
 </html>
 
