fix codespace and gh-page

--- a/layouts/shortcodes/chart.html
+++ b/layouts/shortcodes/chart.html
@@ -1,3 +1,4 @@
 <div id="app"></div>
 
 <script src="/assets/marketManipulationWidget.js"></script>
+<script src="/dn-institute/assets/marketManipulationWidget.js"></script> <!--TODO remove it! (its need for support gh-page(without domain) and codespaces)-->
