--- a/layouts/shortcodes/market_widget.html
+++ b/layouts/shortcodes/market_widget.html
@@ -25,6 +25,6 @@
     </select>
 </div>
 
-<script src="/js/chart.js"></script>
-<script src="/js/axios.min.js"></script>
-<script src="/js/widget.js"></script>
+<script src="/dn-institute/js/chart.js"></script>
+<script src="/dn-institute/js/axios.min.js"></script>
+<script src="/dn-institute/js/widget.js"></script>
